@startuml TiendaHamburgesas

class Pan{
Tipo:list
}
class Verduras{
Tipo:list
}
class Queso{
Tipo:list
}
class Salsa{
Tipo:list
}

class Pedido{
Hamburguesa()
Precio()
}

class Carne{
Tipo:list
}

class Bebida{
tipo:list
}

class User{
Direccion:str
id:int
Metodo_Pago:
Pedido()
Balance_Total()
}

Hamburguesa <|-- Carne
Hamburguesa <|-- Queso
Hamburguesa <|-- Verduras
Hamburguesa <|-- Pan
Hamburguesa <|-- Salsa
@enduml 
